# Islamic-Finance-Expert

./: .dockerignore  .env.example  .gitignore  .slugignore  LICENSE  README.md  challenge1.py  challenge3.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run_agent.py
api/: __init__.py  endpoints.py  pydantic_models.py
api/tasks/: answer.py
dataset/: glossary.csv
docs/: API.md
src/agents/: __init__.py  agent.py  utils.py
src/challenge_1/: agent.py  docs.md  tools.py
src/challenge_2/: docs.md
src/challenge_3/: docs.md
src/challenge_3/agents/: __init__.py  agent.py  utils.py
src/challenge_3/tools/: utils.py
src/config/: __init__.py  config.json
src/config/prompts/: __init__.py  accounting_assistant_instruction.md  agent.md  analyze_agent_instruction.md  fas_agent_instruction.md  justify_agent_instruction.md  rag_prompt.md  review_agent_instruction.md  ss_agent_instruction.md  translate_agent_instruction.md  update_agent_instruction.md  utils.py  validate_agent_instruction.md
src/data_processing/: embedding.py  preprocessing.py  test_connection.py  upload_data.py  utils.py
src/tasks/: __init__.py
src/tools/: agent.py  utils.py
